--- a/caro.html
+++ b/caro.html
@@ -456,10 +456,7 @@ to {
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                 </div>
-            </div>
-		
-
-		
+            </div>	
 		
 	</section>	
 
@@ -468,11 +465,11 @@ to {
         <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important">
             <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm" style="border-width:0px">
+        <div class="card mb-4 rounded-3 shadow-sm" style="border-width:0px; background-color:black">
       <!--    <div class="card-header py-3 bg-dark">
             <h4 class="my-0 fw-normal">The Man</h4>
           </div -->
-          <div class="card-body bg-dark">
+          <div class="card-body">
               <div style="position:relative; height:140px">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                             <div style="position:absolute; top: 0px; height:140px; width:100%">
@@ -490,12 +487,12 @@ to {
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm" style="border-width:0px">
+        <div class="card mb-4 rounded-3 shadow-sm" style="border-width:0px; background-color:black">
         <!--  <div class="card-header py-3 bg-dark">
             <h4 class="my-0 fw-normal">Pro</h4>
           </div> -->
          
-		    <div class="card-body bg-dark">
+		    <div class="card-body">
 		        <div style="position:relative; height:140px">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                                 <div style="position:absolute; top: 0px; height:140px; width:100%">
@@ -526,11 +523,11 @@ to {
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm border-primary" style="border-width:0px">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary" style="border-width:0px; background-color:black">
         <!--  <div class="card-header py-3 text-bg-primary border-primary">
             <h4 class="my-0 fw-normal">Enterprise</h4>
           </div> -->
-          <div class="card-body bg-dark">
+          <div class="card-body">
 		  
 		  <div style="position:relative; height:140px">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(45px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
